--- a/package.json
+++ b/package.json
@@ -1,44 +1,70 @@
 {
-  "name": "react-hooks-fetch-crud-lab",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "json-server": "^0.16.3",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1"
-  },
-  "devDependencies": {
-    "@learn-co-curriculum/jest-learn-reporter": "^0.1.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "mocha": "^8.2.1",
-    "msw": "^0.24.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "echo \".results.json\" && react-scripts test --reporters=@learn-co-curriculum/jest-learn-reporter --reporters=default --watchAll",
-    "eject": "react-scripts eject",
-    "server": "json-server --watch db.json --port=4000"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "questions": [
+    {
+      "id": 1,
+      "prompt": "What special prop should always be included for lists of elements?",
+      "answers": [
+        "id",
+        "name",
+        "key",
+        "prop"
+      ],
+      "correctIndex": 2
+    },
+    {
+      "id": 2,
+      "prompt": "A React component is a function that returns ______.",
+      "answers": [
+        "HTML",
+        "JSX",
+        "props",
+        "state"
+      ],
+      "correctIndex": 1
+    },
+    {
+      "id": 3,
+      "prompt": "Which event handler will run when a user is finished filling out a form?",
+      "answers": [
+        "onSubmit",
+        "onClick",
+        "onChange",
+        "onForm"
+      ],
+      "correctIndex": 0
+    },
+    {
+      "id": 4,
+      "prompt": "______ is a tool that transpiles JSX into valid JavaScript.",
+      "answers": [
+        "React",
+        "Babel",
+        "Webpack",
+        "ES6"
+      ],
+      "correctIndex": 1
+    },
+    {
+      "id": 5,
+      "prompt": "What syntax makes it possible to unpack values from arrays, or properties from objects, into distinct variables?",
+      "answers": [
+        "spread",
+        "key-value",
+        "coalescing",
+        "destructuring"
+      ],
+      "correctIndex": 3
+    },
+    {
+      "id": 6,
+      "prompt": "Returning different elements from a component depending on the state of your application is known as _____ rendering.",
+      "answers": [
+        "voodoo",
+        "conditional",
+        "reactive",
+        "controlled"
+      ],
+      "correctIndex": 1
+    }
+  ]
 }
